--- a/class-setup.yml
+++ b/class-setup.yml
@@ -89,14 +89,8 @@
           - pip
           - ansible
           - ansible-builder
-          - vim-ansible
-          - vim-syntastic-ansible
-          - fzf
           - podman
-          - ansible-collection-containers-podman
-          - pcp-pmda-podman
           - podman-compose
-          - containers-common-extra
 
     - name: Installing Extra Packages
       tags: extra_packages
@@ -104,33 +98,20 @@
         state: present
         skip_broken: true
         name:
-          # - geany
-          # - geany-plugins-*
-          # - geany-themes.noarch
-          # - gtkd-geany-tags.noarch
-          # - firefox
-          # - flatpak
+          - flatpak
           - gnome-tweaks
           # - google-chrome
           - vim
           - wget
-          # - fuse-sshfs
+          - fuse-sshfs
           - terminator
           - git
           - ranger
-          # - powerline-fonts
           - code
-          # - kernel-devel
-          # - ncurses-devel
-          # - ncurses-libs
-          # - ncurses-static
-          # - ncurses
-          - screen
           - bash-completion
-          - libguestfs-bash-completion
           - stress-ng
           - pamtester
-          # - gparted
+          - gparted
 
     - name: Setting up Configurations
       tags: configurations
