--- a/class-setup-v2.yml
+++ b/class-setup-v2.yml
@@ -9,13 +9,6 @@
     username: "{{ lookup('env', 'SUDO_USER') }}"
     rpmfusion: "https://download1.rpmfusion.org"
     repo_path: "https://raw.githubusercontent.com/jmedinar/testchecker/refs/heads/main/"
-    wallpapers_linux:
-      - linux-8k-ultra-hd-art_bWVnaGmUmZqaraWkpJRmZWdpZa1qbGtm.jpg
-      - linux-os-bw_Z2hraG6UmZqaraWkpJRma2VlrWZnZWU.jpg
-    wallpapers_containers:
-      - onboarding-selkies-3ddb7cb6ee2cf9abed002b01f63b1822.png
-      - renovations-21ad5798164b1bb1beceb19646b2a762.png
-      - Microservices-Dockerization-1-2.png
 
   tasks:
 
@@ -23,74 +16,15 @@
       tags: repos
       block:
 
-        - name: Visual Studio Code
-          ansible.builtin.yum_repository:
-            name: Code
-            description: Visual Studio Code
-            baseurl: https://packages.microsoft.com/yumrepos/vscode
-            file: vscode
-            enabled: true
-            gpgcheck: true
-            gpgkey: https://packages.microsoft.com/keys/microsoft.asc
-
         - name: Third party
           ansible.builtin.dnf:
             name: fedora-workstation-repositories
             state: present
 
-        - name: Google Chrome
-          ansible.builtin.yum_repository:
-            name: google-chrome
-            description: Google Chrome Repository
-            baseurl: https://dl.google.com/linux/chrome/rpm/stable/$basearch
-            enabled: true
-            gpgcheck: true
-            gpgkey: https://dl.google.com/linux/linux_signing_key.pub
-
         - name: RPM Fusion
           ansible.builtin.dnf:
             name: rpmfusion-*-release
             state: present
-
-    - name: Installing packages for complete desktop
-      tags: desktop_packages
-      block:
-
-        - name: Install Zoom
-          ansible.builtin.dnf:
-            name: https://zoom.us/client/latest/zoom_x86_64.rpm
-            state: present
-            disable_gpg_check: true
-
-        - name: Multimedia Packages
-          ansible.builtin.dnf:
-            state: present
-            skip_broken: true
-            exclude:
-              - gstreamer1-plugins-bad-free-devel
-              - lame-devel
-            name:
-              - python3-xlib
-              - "@multimedia"
-              - lame
-              - gstreamer1-plugin-openh264
-              - gstreamer1-plugins-base-*
-              - gstreamer1-plugins-good-*
-              - gstreamer1-plugins-bad-*
-
-    - name: Installing packages for containers
-      tags: container_packages
-      ansible.builtin.dnf:
-        state: present
-        skip_broken: true
-        name:
-          - yq
-          - jq
-          - pip
-          - ansible
-          - ansible-builder
-          - podman
-          - podman-compose
 
     - name: Installing Extra Packages
       tags: extra_packages
@@ -100,14 +34,12 @@
         name:
           - flatpak
           - gnome-tweaks
-          # - google-chrome
           - vim
           - wget
           - fuse-sshfs
           - terminator
           - git
           - ranger
-          - code
           - bash-completion
           - stress-ng
           - pamtester
@@ -173,59 +105,6 @@
             mode: '0640'
             create: true
 
-        - name: Get final scripts
-          ansible.builtin.get_url:
-            url: "{{ repo_path }}/{{ item }}"
-            dest: /usr/bin/
-            mode: "0755"
-            owner: root
-            group: root
-          no_log: true
-          loop:
-            - finals/launcher
-            - finals/final
-            - finals/testlauncher.yml
-
-        - name: Setup Module5 Requirements
-          ansible.builtin.file:
-            path: /sysadm/bin
-            state: directory
-            mode: '755'
-            owner: "{{ username }}"
-            group: "{{ username }}"
-
-        - name: Download Challenges
-          ansible.builtin.get_url:
-            url: "{{ repo_path }}/{{ item }}"
-            dest: /sysadm/bin/
-            mode: '0755'
-            owner: "{{ username }}"
-            group: "{{ username }}"
-          loop:
-            - challenges/challenge1.sh
-            - challenges/challenge2.sh
-            - challenges/challenge3.sh
-            - challenges/challenge4.sh
-            - challenges/challenge5.sh
-            - challenges/challenge6.sh
-            - challenges/challenge7.sh
-            - challenges/challenge8.sh
-            - challenges/challenge9.sh
-            - challenges/homeChecker.sh
-            - challenges/processFile.sh
-            - challenges/rabbitJumps.sh
-            - challenges/testString.sh
-            - challenges/userValidator.sh
-
-        - name: Setup Module6 Performance Init Installation
-          no_log: true
-          ansible.builtin.get_url:
-            url: "{{ repo_path }}/performance/mod6-init.sh"
-            dest: /usr/bin/mod6-init
-            mode: '0755'
-            owner: root
-            group: root
-
     - name: Configure Security
       tags: security
       block:
@@ -266,51 +145,6 @@
             state: started
             enabled: true
 
-    - name: Configure Cockpit
-      become: true
-      tags: cockpit
-      block:
-
-        - name: Install Cockpit
-          ansible.builtin.dnf:
-            name:
-              - cockpit
-              - cockpit-composer
-              - cockpit-file-sharing
-              - cockpit-files
-              - cockpit-machines
-              - cockpit-navigator
-              - cockpit-networkmanager
-              - cockpit-ostree
-              - cockpit-packagekit
-              - cockpit-podman
-              - cockpit-selinux
-              - cockpit-storaged
-              - cockpit-system
-              - cockpit-ws
-              - cockpit-ws-selinux
-            state: present
-            skip_broken: true
-
-        - name: Enable Cockpit
-          ansible.builtin.service:
-            name: cockpit
-            state: started
-            enabled: true
-
-        - name: Open firewall for cockpit
-          ansible.posix.firewalld:
-            permanent: true
-            port: 9090/tcp
-            state: enabled
-            immediate: true
-
-        - name: Remove root from disalowed users list
-          ansible.builtin.lineinfile:
-            path: /etc/cockpit/disallowed-users
-            state: absent
-            line: root
-
     - name: Configure Look & Feel
       tags: looks
       block:
@@ -325,7 +159,6 @@
           loop:
             - '/home/{{ username }}/.icons'
             - '/home/{{ username }}/.themes'
-            - '/home/{{ username }}/.wallpapers'
 
         - name: Set terminator configuration folder
           ansible.builtin.file:
@@ -393,18 +226,6 @@
       become_user: "{{ username }}"
       block:
 
-        - name: Download Wallpapers
-          ansible.builtin.get_url:
-            url: "{{ item }}"
-            dest: "/home/{{ username }}/.wallpapers/"
-            mode: "0660"
-            owner: "{{ username }}"
-            group: "{{ username }}"
-          loop:
-            - https://podman-desktop.io/assets/images/onboarding-selkies-3ddb7cb6ee2cf9abed002b01f63b1822.png
-            - https://podman-desktop.io/assets/images/renovations-21ad5798164b1bb1beceb19646b2a762.png
-            - https://middleware.io/wp-content/uploads/2022/03/Microservices-Dockerization-1-2.png
-
         - name: Set Launcher Icons for Linux
           become: true
           become_user: "{{ username }}"
@@ -413,48 +234,9 @@
             a2: terminator.desktop
             a3: ranger.desktop
             a4: geany.desktop
-            a5: code.desktop
-            a6: org.gnome.Nautilus.desktop
+            a5: org.gnome.Nautilus.desktop
           ansible.builtin.shell: |
-            gsettings set org.gnome.shell favorite-apps "['{{ a1 }}','{{ a2 }}','{{ a3 }}','{{ a4 }}','{{ a5 }}','{{ a6 }}']"
-          environment:
-            DBUS_SESSION_BUS_ADDRESS: "unix:path=/run/user/1000/bus"
-          changed_when: false
-
-    - name: Configure wallpaper
-      tags: containers_looks
-      become: true
-      become_user: "{{ username }}"
-      block:
-
-        - name: Pick a random wallpaper
-          ansible.builtin.set_fact:
-            selected_wallpaper: "{{ wallpapers_containers | random }}"
-
-        - name: Set wallpaper
-          become: true
-          become_user: "{{ username }}"
-          ansible.builtin.shell: |
-            gsettings set org.gnome.desktop.background picture-uri "file:///home/{{ username }}/.wallpapers/{{ selected_wallpaper }}"
-          environment:
-            DBUS_SESSION_BUS_ADDRESS: "unix:path=/run/user/1000/bus"
-          changed_when: false
-
-    - name: Configure wallpaper
-      tags: linux_looks
-      become: true
-      become_user: "{{ username }}"
-      block:
-
-        - name: Pick a random wallpaper
-          ansible.builtin.set_fact:
-            selected_wallpaper: "{{ wallpapers_linux | random }}"
-
-        - name: Set wallpaper
-          become: true
-          become_user: "{{ username }}"
-          ansible.builtin.shell: |
-            gsettings set org.gnome.desktop.background picture-uri "file:///home/{{ username }}/.wallpapers/{{ selected_wallpaper }}"
+            gsettings set org.gnome.shell favorite-apps "['{{ a1 }}','{{ a2 }}','{{ a3 }}','{{ a4 }}','{{ a5 }}']"
           environment:
             DBUS_SESSION_BUS_ADDRESS: "unix:path=/run/user/1000/bus"
           changed_when: false
