--- a/class-setup-v2.yml
+++ b/class-setup-v2.yml
@@ -32,11 +32,9 @@
         state: present
         skip_broken: true
         name:
-          - flatpak
           - gnome-tweaks
           - vim
           - wget
-          - fuse-sshfs
           - terminator
           - git
           - ranger
@@ -104,6 +102,21 @@
             line: 'alias testchecker="sudo testchecker"'
             mode: '0640'
             create: true
+
+        - name: Downloading ChaTTY
+          ansible.builtin.get_url:
+            url: https://github.com/jmedinar/chatty/blob/main/RPMS/chatty-2.0-0.fc42.noarch.rpm
+            dest: /tmp/chatty-2.0-0.fc42.noarch.rpm
+            mode: '0644'
+            owner: root
+            group: root
+            force: true
+
+        - name: Installing ChaTTY
+          ansible.builtin.dnf:
+            name: /tmp/chatty-2.0-0.fc42.noarch.rpm
+            state: install
+            skip_broken: true
 
     - name: Configure Security
       tags: security
